# Lycrex-network-home

./: .gitignore  Cargo.toml  build.rs  build_linux.sh
.github/workflows/: release.yml
home/: index.html  index.js
home/auth/: index.html
home/auth/callback/: index.html
home/profile/: index.html
home/static/css/: style.css  styles.css
home/static/js/: server-status.js  server-version.js  terminal.js  typing.js  visitor-stats.js
home/static/profile/css/: styles.css
home/static/profile/js/: main.js
src/: config.rs  db.rs  log.rs  main.rs  static_files.rs
src/api/: authenticate.rs  command.rs  mod.rs  status.rs  visitor.rs
src/api/commands/: echo.rs  enter.rs  help.rs  mod.rs  password.rs  system.rs  token.rs
src/profile/: handlers.rs  models.rs  utils.rs
static/profile/css/: styles.css
static/profile/js/: main.js
