[package]
name = "lycrex-home"
version = "0.0.5"
edition = "2021"

[dependencies]
rimplog = "0.1"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
include_dir = "0.7"
config = "0.13"
toml = "0.8"
notify = "6.1"
regex = "1.10.2"
chrono = "0.4"
num_cpus = "1.16"
sys-info = "0.9"
once_cell = "1.19"
async-trait = "0.1"