[package]
name = "lycrex-home"
version = "0.0.10"
edition = "2021"

[dependencies]
rimplog = "0.1"
axum = { version = "0.7", features = ["multipart"] }
reqwest = { version = "0.12.15", features = ["json", "multipart", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tower-cookies = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
include_dir = "0.7"
config = "0.13"
toml = "0.8"
notify = "6.1"
regex = "1.10.2"
chrono = "0.4"
num_cpus = "1.16"
sys-info = "0.9"
once_cell = "1.19"
async-trait = "0.1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
futures = "0.3.28"
time = "0.3" 